--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Inclusão do arquivo com código CSS -->
-        <link href="css/estilos.css" rel="stylesheet"> 
+        <link href="../../css/estilos.css" rel="stylesheet"> 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         
         <!-- Redefine o tamanho base de fonte para toda a página -->
@@ -14,6 +14,13 @@
         <style>
             html {
                 font-size: 14px !important;
+            }
+
+            iframe {
+                display: block;
+                margin: 0;
+                padding: 0;
+                border: none;
             }
         </style>
 
@@ -28,8 +35,55 @@
     </head>
     <body>
         <header>
-            <iframe src="../components/header/header.html" width="100%" height="300" style="border:none;"></iframe>
+            <iframe src="../components/header/header.html" width="100%" height=164px style="border:none;"></iframe>
         </header>
+
+        <!-- Banner SlideShow inicial -->
+        <div id="customCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <!-- Primeiro Slide -->
+                <div class="carousel-item active">
+                    <a href="oliviaRodrigo.html">
+                        <img src="../images/oliviaRodrigo.gif" class="d-block w-100" alt="Olivia Rodrigo">
+                        <div class="carousel-caption">
+                            <h5>OLIVIA RODRIGO</h5>
+                            <p>GUTS - World Tour com St. Vincent</p>
+                        </div>
+                    </a>
+                </div>
+                <!-- Segundo Slide -->
+                <div class="carousel-item">
+                    <a href="lollapalooza.html">
+                        <img src="../images/lollapalooza.gif" class="d-block w-100" alt="Lollapalooza Brasil 2025">
+                        <div class="carousel-caption">
+                            <h5>LOLLAPALOOZA BRASIL 2025</h5>
+                            <p>Shows no dia 28, 29 e 30 de março</p>
+                        </div>
+                    </a>
+                </div>
+                <!-- Terceiro Slide -->
+                <div class="carousel-item">
+                    <a href="coldplay.html">
+                        <img src="../images/coldplay.jpg" class="d-block w-100" alt="Coldplay">
+                        <div class="carousel-caption">
+                            <h5>COLDPLAY</h5>
+                            <p>Music of the Spheres - Em breve mais informações</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <!-- Controles -->
+            <button class="carousel-control-prev" type="button" data-bs-target="#customCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Anterior</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#customCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Próximo</span>
+            </button>
+        </div>
+
         <!-- Div (container) que futuramente será de visualização flexível -->
         <!-- Isso vai permitir organizar o conteúdo em colunas -->
         <!-- Bloco lógico que engloba todo o conteúdo da página -->
