atualizações da home

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -45,31 +45,44 @@
                 <div class="carousel-item active">
                     <a href="oliviaRodrigo.html">
                         <img src="../images/oliviaRodrigo.gif" class="d-block w-100" alt="Olivia Rodrigo">
-                        <div class="carousel-caption">
-                            <h5>OLIVIA RODRIGO</h5>
-                            <p>GUTS - World Tour com St. Vincent</p>
-                        </div>
                     </a>
+                    <div class="carousel-caption">
+                        <h5>OLIVIA RODRIGO</h5>
+                        <p>GUTS - World Tour com St. Vincent</p>
+                        <a href="oliviaRodrigo.html" class="btn btn-comprar">Comprar</a>
+                    </div> 
                 </div>
                 <!-- Segundo Slide -->
                 <div class="carousel-item">
                     <a href="lollapalooza.html">
                         <img src="../images/lollapalooza.gif" class="d-block w-100" alt="Lollapalooza Brasil 2025">
-                        <div class="carousel-caption">
-                            <h5>LOLLAPALOOZA BRASIL 2025</h5>
-                            <p>Shows no dia 28, 29 e 30 de março</p>
-                        </div>
                     </a>
+                    <div class="carousel-caption">
+                        <h5>LOLLAPALOOZA BRASIL 2025</h5>
+                        <p>Shows no dia 28, 29 e 30 de março</p>
+                        <a href="lollapalooza.html" class="btn btn-comprar">Comprar</a>
+                    </div>
                 </div>
                 <!-- Terceiro Slide -->
                 <div class="carousel-item">
                     <a href="coldplay.html">
                         <img src="../images/coldplay.jpg" class="d-block w-100" alt="Coldplay">
-                        <div class="carousel-caption">
-                            <h5>COLDPLAY</h5>
-                            <p>Music of the Spheres - Em breve mais informações</p>
-                        </div>
                     </a>
+                    <div class="carousel-caption">
+                        <h5>COLDPLAY</h5>
+                        <p>Music of the Spheres - Em breve mais informações</p>
+                    </div>
+                </div>
+                <!-- Quarto Slide -->
+                <div class="carousel-item">
+                    <a href="theTown.html">
+                        <img src="../images/theTown.gif" class="d-block w-100" alt="The Town">
+                    </a>
+                    <div class="carousel-caption">
+                        <h5>THE TOWN 2025</h5>
+                        <p>6, 7, 12, 13, 14 de setembro</p>
+                        <a href="theTown.html" class="btn btn-comprar">Comprar</a>
+                    </div>
                 </div>
             </div>
 
